Fix for bug #13820 (No warning on log(NEGATIVE))

mysql-test/r/func_math.result:
  result fixed
mysql-test/t/func_math.test:
  test case added
sql/item_func.cc:
  tests for (value<=0.0) added to LOG* functions