sql/item_func.cc
@@ -1386,8 +1386,13 @@ double Item_func_ln::val_real()
 {
   DBUG_ASSERT(fixed == 1);
   double value= args[0]->val_real();
-  if ((null_value=(args[0]->null_value || value <= 0.0)))
+  if ((null_value=args[0]->null_value))
     return 0.0;
+  if ((null_value= value <=0.0))
+  {
+    signal_divide_by_null();
+    return 0.0;
+  }
   return log(value);
 }
 
@@ -1400,13 +1405,23 @@ double Item_func_log::val_real()
 {
   DBUG_ASSERT(fixed == 1);
   double value= args[0]->val_real();
-  if ((null_value=(args[0]->null_value || value <= 0.0)))
+  if ((null_value=args[0]->null_value))
     return 0.0;
+  if ((null_value= value <=0.0))
+  {
+    signal_divide_by_null();
+    return 0.0;
+  }
   if (arg_count == 2)
   {
     double value2= args[1]->val_real();
-    if ((null_value=(args[1]->null_value || value2 <= 0.0 || value == 1.0)))
+    if ((null_value=args[1]->null_value))
       return 0.0;
+    if ((null_value= value2 <=0.0) || (value == 1.0))
+    {
+      signal_divide_by_null();
+      return 0.0;
+    }
     return log(value2) / log(value);
   }
   return log(value);
@@ -1416,8 +1431,14 @@ double Item_func_log2::val_real()
 {
   DBUG_ASSERT(fixed == 1);
   double value= args[0]->val_real();
-  if ((null_value=(args[0]->null_value || value <= 0.0)))
+
+  if ((null_value=args[0]->null_value))
     return 0.0;
+  if ((null_value= value <=0.0))
+  {
+    signal_divide_by_null();
+    return 0.0;
+  }
   return log(value) / M_LN2;
 }
 
@@ -1425,8 +1446,13 @@ double Item_func_log10::val_real()
 {
   DBUG_ASSERT(fixed == 1);
   double value= args[0]->val_real();
-  if ((null_value=(args[0]->null_value || value <= 0.0)))
-    return 0.0; /* purecov: inspected */
+  if ((null_value=args[0]->null_value))
+    return 0.0;
+  if ((null_value= value <=0.0))
+  {
+    signal_divide_by_null();
+    return 0.0;
+  }
   return log10(value);
 }
 
